--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Queer Tachyons
+name: RedTachyon
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: ML Engineer in Stockholm (currently)
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars0.githubusercontent.com/u/19414946?s=400&u=7818cf8d8604a38a1c6a4e4d62134bf200d39628&v=4
 
 #
 # Flags below are optional
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: RedTachyon
   instagram:
-  linkedin:
+  linkedin: redtachyon
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
